--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -3,24 +3,28 @@
 \usepackage[brazil]{babel}
 \usepackage{color}
 
+
 \begin{document}
-\title{E-Gov e Aplicativo Auxílio Emergencial Caixa}
+\title{Aplicativos E-Gov}
 \author{Douglas Ivo e Danilo dos Santos}
 
 \maketitle
+\pagebreak
 \tableofcontents
 \pagebreak
 
-\section{Seção1}
+\section{Contextualizar e definir o problema atacado pelo produto e/ou tecnologia de informação alvo}
 \textit{\textbf{Conteúdo da seção 1}}
+\subsection{subseção1}
 
-
-\subsection{Subseção1}
-Conteúdo da subseção 1
-
-\section{Seção2}
+\section{Apresentar os objetivos da monografia}
 Conteúdo da seção 2
-\subsection{Subseção1}
-test
-olá
+\subsection{subseção1}
+
+\section{Apresentar a solução de TI em alto nível e também relacionando-a com as áreas de SI (Banco de Dados, infraestrutura de TI, Engenharia de Software, Análise de Informações e Apoio à Decisão, Algoritmos, Projetos, Segurança, Governança, Uso da Internet …);}
+\subsection{subseção1}
+
+\section{Apresentar as conclusões e referências utilizadas}
+\subsection{subseção1}
+
 \end{document}
