--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -26,7 +26,7 @@
      
 \sloppy
 
-\title{E-Gov e Aplicativo Auxílio Emergencial Caixa}
+\title{Caixa Tem e Você Não}
 
 \author{Danilo dos Santos de Oliveira, Douglas Ivo Martins de Moraes}
 
@@ -42,7 +42,7 @@
   10 lines and must be in the first page of the paper.
 \end{abstract}
      
-\begin{resumo} 
+\begin{resumo}
   Este meta-artigo descreve o estilo a ser usado na confecção de artigos e
   resumos de artigos para publicação nos anais das conferências organizadas
   pela SBC. É solicitada a escrita de resumo e abstract apenas para os artigos
@@ -55,8 +55,33 @@
 
 \section{Contextualizar e definir o problema atacado pelo produto e/ou tecnologia de informação alvo} \label{sec:firstpage}
 
-Conteúdo
+	Na pandemia em que vivemos surgiram vários problemas e um deles, o desemprego. Para isso, foi criado o auxílo emergencial pela caixa para que fosse concendido um valor de R\$ 600, somenete para aqueles que sofrem desse desemprego ou ainda da deficiência econômica causada pela pandêmia.
+\subsection{Regras do auxílio emergêncial}	
+Com isso, o auxílio emergência visa contemplar somente aqueles com:
+\linebreak
+\linebreak
+*idade; Maior de 18 anos (exceto mães)
+\linebreak
+\linebreak
+*Ocupação; Trabalhador sem carteira assinada, autônomo, MEI (microempreendedor individual), desempregado, contribuinte individual da Previdência 
+\linebreak
+\linebreak
+*Renda; Renda por pessoa da família de até R\$ 522,50 ou renda familiar de até R\$ 3.135. E não ter recebido rendimentos tributáveis acima de R\$ 28.559,70 em 2018
+\linebreak
+\linebreak
+E ainda não tem direito quem já recebe seguro-desemprego, BPC, aposentadoria ou pensão
+\linebreak
+\linebreak
+\subsection{Problemas Solucionados}
+	No entanto, este programa trouxe outro problema, que é a superlotação e grandes filas em agências para o saque ou ainda para o cadastramento para a análise do auxílio emergêncial. Com isso, em 23 de maio, a caixa lançou o aplicativo, Caixa | Auxílio Emergêncial, para que esses problemas possam ser resolvídos.
 
+\subsection{Detalhes do aplicativo}
+	Portanto, este é um aplicativo que compreende o négocio do tipo G2C, propondo um contato mais direto e imediato entre o governo e às pessoas que buscam pelo auxílio emergencial. Também exige a conexão com a internet para saques e cadastramentos.
+\subsection{Problemas causados}
+	Embora as filas tenham sidas reduzidas ao mínimo, problemas de cunho ético foram surgindo. Trata-se de pessoas burlando o sistema para receber o auxílio, isto é, mesmo estas que não fazem parte do grupo que é contemplado pelo programa. Como foi o caso do filho de William Bonner, que teve sua identidade roubada para fazer registro no auxílio emergêncial e teve e mesmo assim, teve o status aprovado.
+\linebreak
+\linebreak
+	Então percebemosos que, além do sistema não ser muito confiável na analise dos dados(pois sendo filho de William Bonner, muito provavelmente não estaria no grupo de necessitados do auxílio emergência e mesmo assim teve o status de aprovado). Ainda não é muito eficiente na detecção de fraudes, onde um cidadão pode-se passar por outro, a fim de se beneficiar ou ainda abusar do sistema do auxílio emergêncial. 
 \section{Apresentar os objetivos da monografia}
 Conteúdo
 
