Update E-Gov e Aplicativo Auxílio Emergencial Caixa.tex

--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -55,7 +55,7 @@
 
 \section{Contextualizar e definir o problema atacado pelo produto e/ou tecnologia de informação alvo} \label{sec:firstpage}
 
-	Na pandemia em que vivemos surgiram vários problemas e um deles, o desemprego. Para isso, foi criado o auxílo emergencial pela caixa para que fosse concendido um valor de R\$ 600, somenete para aqueles que sofrem desse desemprego ou ainda da deficiência econômica causada pela pandêmia.
+	No atual estado da pandemia que agrava o mundo várias crises e problemas estão surgindo, dentre eles se encontra o desemprego. Sendo assim, como uma forma de o governo solucionar esse problema foi criado o auxílo emergencial e a Caixa Econônimica Federal ficou responsável pela iniciativa, o intuito é conceder o valor de R\$ 600 somente para aqueles que sofrem o risco de serem afetados pelo desemprego ou ainda pela deficiência econômica causada pela pandêmia.
 \subsection{Regras do auxílio emergêncial}	
 Com isso, o auxílio emergência visa contemplar somente aqueles com:
 \linebreak
@@ -73,15 +73,15 @@ E ainda não tem direito quem já recebe seguro-desemprego, BPC, aposentadoria o
 \linebreak
 \linebreak
 \subsection{Problemas Solucionados}
-	No entanto, este programa trouxe outro problema, que é a superlotação e grandes filas em agências para o saque ou ainda para o cadastramento para a análise do auxílio emergêncial. Com isso, em 23 de maio, a caixa lançou o aplicativo, Caixa | Auxílio Emergêncial, para que esses problemas possam ser resolvídos.
+	No entanto, este programa trouxe outra adversidade, que é a superlotação e grandes filas em agências para o saque ou ainda para o cadastramento para a análise do auxílio emergêncial. Com isso, em 23 de maio, a caixa lançou o aplicativo, Caixa | Auxílio Emergêncial, para que esses problemas possam ser resolvídos.
 
 \subsection{Detalhes do aplicativo}
-	Portanto, este é um aplicativo que compreende o négocio do tipo G2C, propondo um contato mais direto e imediato entre o governo e às pessoas que buscam pelo auxílio emergencial. Também exige a conexão com a internet para saques e cadastramentos.
+	Portanto, este é um aplicativo que compreende o négocio do tipo G2C, propondo um contato mais direto e imediato entre o governo e às pessoas que buscam pelo auxílio emergencial, exigindo o acesso a uma conexão de rede internet para saques e cadastramentos.
 \subsection{Problemas causados}
-	Embora as filas tenham sidas reduzidas ao mínimo, problemas de cunho ético foram surgindo. Trata-se de pessoas burlando o sistema para receber o auxílio, isto é, mesmo estas que não fazem parte do grupo que é contemplado pelo programa. Como foi o caso do filho de William Bonner, que teve sua identidade roubada para fazer registro no auxílio emergêncial e teve e mesmo assim, teve o status aprovado.
+	Embora as filas tenham sidas reduzidas ao mínimo, problemas de cunho ético foram surgindo. Trata-se de pessoas burlando o sistema para receber o auxílio, isto é, mesmo estas que não fazem parte do grupo que é contemplado pelo programa. Como foi o caso do filho de William Bonner, Vinícius Bonner, que teve sua identidade roubada e usada para um cadastramento do auxílio emergêncial e mesmo assim, teve o status aprovado.
 \linebreak
 \linebreak
-	Então percebemosos que, além do sistema não ser muito confiável na analise dos dados(pois sendo filho de William Bonner, muito provavelmente não estaria no grupo de necessitados do auxílio emergência e mesmo assim teve o status de aprovado). Ainda não é muito eficiente na detecção de fraudes, onde um cidadão pode-se passar por outro, a fim de se beneficiar ou ainda abusar do sistema do auxílio emergêncial. 
+	Então percebemosos que, o sistema não é muito confiável na analise dos dados, pois de acordo William Bonner, as condições sócio-econômicas de seu filho não atendem aos critérios do grupo de necessitados do auxílio emergêncial, portanto ele não tem direito aos 600 reais, porém ainda obteve o status de aprovado. Logo pode-se concluir que não há eficiência na detecção de fraudes, onde um cidadão pode-se passar por outro, a fim de se beneficiar ou ainda abusar do sistema do auxílio emergêncial. 
 \section{Apresentar os objetivos da monografia}
 Conteúdo
 
