--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -83,7 +83,7 @@ E ainda não tem direito quem já recebe seguro-desemprego, BPC, aposentadoria o
 \linebreak
 	Então percebemosos que, o sistema não é muito confiável na analise dos dados, pois de acordo William Bonner, as condições sócio-econômicas de seu filho não atendem aos critérios do grupo de necessitados do auxílio emergêncial, portanto ele não tem direito aos 600 reais, porém ainda obteve o status de aprovado. Logo pode-se concluir que não há eficiência na detecção de fraudes, onde um cidadão pode-se passar por outro, a fim de se beneficiar ou ainda abusar do sistema do auxílio emergêncial. 
 \section{Apresentar os objetivos da monografia}
-Conteúdo
+	Esta monografia tem o objetivo de auxiliar e dar opções para contornar as dificuldades que o Auxílio Emergencial esta sofrendo em relação à análise de dados de seu programa atualmente, visando uma possibilidade de solucionar sua deficiência na manipulação de dados, por meio de um gerenciamento de banco de dados avançado que beneficie, viávelmente, o sistema de análise de informações e apoio à decisão sem prejudicar informações pessoais.
 
 \section{Apresentar a solução de TI em alto nível e também relacionando-a com as áreas de SI (Banco de Dados, infraestrutura de TI, Engenharia de Software, Análise de Informações e Apoio à Decisão, Algoritmos, Projetos, Segurança, Governança, Uso da Internet …);}
 Conteúdo
