--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -81,12 +81,12 @@ E ainda não tem direito quem já recebe seguro-desemprego, BPC, aposentadoria o
 	Embora as filas tenham sidas reduzidas ao mínimo, problemas de cunho ético foram surgindo. Trata-se de pessoas burlando o sistema para receber o auxílio, isto é, mesmo estas que não fazem parte do grupo que é contemplado pelo programa. Como foi o caso do filho de William Bonner, Vinícius Bonner, que teve sua identidade roubada e usada para um cadastramento do auxílio emergêncial e mesmo assim, teve o status aprovado.
 \linebreak
 \linebreak
-	Então percebemosos que, o sistema não é muito confiável na analise dos dados, pois de acordo com William Bonner, as condições sócio-econômicas de seu filho não atendem aos critérios do grupo de necessitados do auxílio emergêncial, portanto ele não tem direito aos 600 reais, porém ainda obteve o status de aprovado. Logo pode-se concluir que não há eficiência na detecção de fraudes, onde um cidadão pode-se passar por outro, a fim de se beneficiar ou ainda abusar do sistema do auxílio emergêncial. 
+	Então percebemosos que, o sistema não é muito confiável na analise dos dados, pois de acordo com William Bonner, as condições sócio-econômicas de seu filho não atendem aos critérios do grupo de necessitados do auxílio emergêncial, portanto ele não tem direito aos 600 reais, porém ainda obteve o status de aprovado. Logo pode-se concluir que não há eficiência na detecção de fraudes, onde um cidadão pode-se passar por outro, a fim de se beneficiar ou ainda abusar do sistema do auxílio emergêncial. Além de ainda haver o caso de vários relatos de necessitados que não estão recebendo o auxílio.
 \section{Apresentar os objetivos da monografia}
 	Esta monografia tem o objetivo de auxiliar e dar opções para contornar as dificuldades que o Auxílio Emergencial esta sofrendo em relação à análise de dados de seu programa atualmente, visando uma possibilidade de solucionar sua deficiência na manipulação de dados, por meio de um gerenciamento de banco de dados avançado que beneficie, viávelmente, o sistema de análise de informações e apoio à decisão sem danificar informações pessoais.
 
 \section{Apresentar a solução de TI em alto nível e também relacionando-a com as áreas de SI (Banco de Dados, infraestrutura de TI, Engenharia de Software, Análise de Informações e Apoio à Decisão, Algoritmos, Projetos, Segurança, Governança, Uso da Internet …);}
-Conteúdo
+	Em vista da inevitabilidade de uma análise para eleger o status daqueles que necessitam ou não do benefício Auxílio Emergencial, percebe-se também a presença de um ou mais bancos de dados e diante da obrigação de analisar os dados de milhões de indivíduos, lógicamente nota-se a exigência de ferramentas digitais que auxiliem nesse processo.
 \linebreak
 \linebreak
 Conteúdo
