--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -30,23 +30,14 @@
 \author{Danilo dos Santos de Oliveira, Douglas Ivo Martins de Moraes}
 
 \maketitle
-
-\begin{abstract}
-  This meta-paper describes the style to be used in articles and short papers
-  for SBC conferences. For papers in English, you should add just an abstract
-  while for the papers in Portuguese, we also ask for an abstract in
-  Portuguese (``resumo''). In both cases, abstracts should not have more than
-  10 lines and must be in the first page of the paper.
-\end{abstract}
+ 
+ 
+ 
+ 
+ 
      
 \begin{resumo}
-  Este meta-artigo descreve o estilo a ser usado na confecção de artigos e
-  resumos de artigos para publicação nos anais das conferências organizadas
-  pela SBC. É solicitada a escrita de resumo e abstract apenas para os artigos
-  escritos em português. Artigos em inglês deverão apresentar apenas abstract.
-  Nos dois casos, o autor deve tomar cuidado para que o resumo (e o abstract)
-  não ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira
-  página do artigo.
+  Esta Mini-monografia descreve como um problema, causado em uma iniciativa para ajudar a população afetada economicamente pela pandemia do novo coronavírus - COVID 19, pode ser resolvido com o auxilio de um gestor de dados mestre (MDM - master data management) e o quão benéfico ele pode ser para fornecer uma manipulação de dados facilmente maleável mantendo uma margem de erro baixa que favorece assim, tanto o E-gov quanto o contribuinte.
 \end{resumo}
 
 
@@ -103,7 +94,7 @@ E ainda não tem direito quem já recebe seguro-desemprego, BPC, aposentadoria o
 	A base para desenvolver essa solução é o caso da empresa R. R. Donnelley relatado no livro "Sistemas de Informação Gerenciais" do Keneth e Jane Laudon, a empresa passou por dificuldades na manipulação de dados após a aquisição de algumas grandes empresas devido aos erros que os vários bancos de dados separados de cada causavam, para solucionar isso implementaram um MDM que consolidava essas informações, resolvendo assim sua situação.
 \linebreak
 \linebreak
-	O cenário atual é semelhante a esse relato, considerando que a deficiência na análise e gestão de informações de ditintos bancos de dados são similares, portanto com a implantação de uma gestão de dados mestre ou MDM, os dados seriam consolidados e registrados em um único arquivo mestre de forma a ser o mais eficiente possivel na coleta de dados, para que seja retido somente os dados mais atualizados, desse modo, consequentemente a detecção de pessoas que necessitam do Auxílio Emergêncial e os casos de fraudes seriam facilmente identificados, pois a infraestrutura de TI o sistema de apoio à decisão também serão, por consequência, melhorados.
+	O cenário atual é semelhante a esse relato, considerando que a deficiência na análise e gestão de informações de ditintos bancos de dados são similares, portanto com a implantação de uma gestão de dados mestre ou MDM, os dados seriam consolidados e registrados em um único arquivo mestre de forma a ser o mais eficiente possivel na coleta de dados, pois o processo MDM inclui multiplas etapas de análise de processos como a limpeza, consolidação e reconciliação de dados, e ainda a migração destes dados para um arquivo mestre de todos os dados da empresa, para que seja retido somente os dados mais atualizados, desse modo, consequentemente a detecção de pessoas que necessitam do Auxílio Emergêncial e os casos de fraudes seriam facilmente identificados, pois a infraestrutura de TI o sistema de apoio à decisão também serão, por consequência, melhorados.
 
 \section{Apresentar as conclusões}
 	Concluímos assim que, o desempenho de uma empresa depende do que ela pode ou não fazer com seus dados. E a forma como armazenam, organizam e gerenciam essas informações causam muita influência sobre a eficiência necessária para realizar uma determinada finalidade.
