--- a/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
+++ b/E-Gov e Aplicativo Auxílio Emergencial Caixa.tex
@@ -70,7 +70,7 @@ E ainda não tem direito quem já recebe seguro-desemprego, BPC, aposentadoria o
 	Esta monografia tem o objetivo de auxiliar e dar opções para contornar as dificuldades que o Auxílio Emergencial esta sofrendo em relação à análise de dados de seu programa atualmente, visando uma possibilidade de solucionar sua deficiência na manipulação de dados, por meio de um gerenciamento de banco de dados avançado que beneficie, viávelmente, o sistema de análise de informações e apoio à decisão sem danificar informações pessoais.
 
 \section{Apresentar a solução de TI em alto nível e também relacionando-a com as áreas de SI (Banco de Dados, infraestrutura de TI, Engenharia de Software, Análise de Informações e Apoio à Decisão, Algoritmos, Projetos, Segurança, Governança, Uso da Internet …);}
-	Em vista da inevitabilidade de uma análise para eleger o status daqueles que necessitam ou não do benefício Auxílio Emergencial, percebe-se também a presença de um ou mais bancos de dados e diante da obrigação de analisar os dados de milhões de indivíduos, lógicamente nota-se a exigência de ferramentas digitais que auxiliem nesse processo. Para realizar esse processo a empresa de TI do governo, denominada Dataprev, irá utilizar os dados pessoais de cada um, que são informações relacionadas a pessoa natural identificada ou identificável, para determinar quem tem direito de receber ou não o benefício, a fim de obter esses dados para análise a Dataprev consulta diversas bases de dados já existentes, dentre as principais estão:
+	Em vista da inevitabilidade de uma análise para eleger o status daqueles que necessitam ou não do benefício Auxílio Emergencial, percebe-se também a presença de um ou mais bancos de dados e diante da obrigação de analisar os dados de milhões de indivíduos, lógicamente nota-se a exigência de ferramentas digitais que auxiliem nesse processo. Para realizar esse processo a empresa de TI do governo, denominada Dataprev, irá utilizar, dentro dos limites legais, os dados pessoais de cada um, que são informações relacionadas a pessoa natural identificada ou identificável, para determinar quem tem direito de receber ou não o benefício, a fim de obter esses dados para análise a Dataprev consulta diversas bases de dados já existentes, dentre as principais estão:
 *Cadastro app e CadÚnico;
 
 *Receita federal(CPF e IR);
